# godemos

./: FormatString.go  IsSnowFlake.go  SnowFlake.go  algorithm.go  arr.go  bibao-sum.go  binaryHeap.go  binarytree.go  bit.go  bucket.ListObjects.go  bucket.ListObjects.parse.sh  ch.go  channel-deadlock.go  channel.go  cpself.sh  data.php  descbcpkcs5unpadding.go  dirtest.sh  filename.go  fmt  fmt.go  func.go  gindemo.go  go.mod  gomap.go  gomapdel.go  goroutine-print.go  gotest.go  gotxt.go  houserabber.go  httpget.go  idcheck.go  instancelist.go  interrupt.go  interview.md  ip.go  iplist.go  iprestore.go  javareg.java  javastrtomap.java  (+42 more)
green-third-party-sdk/: .gitignore
green-third-party-sdk/green-cpp-sdk/: .gitignore  ApiBase.h  Biz.h  CMakeLists.txt  DefaultProfile.h  GreenService.h  ImageSyncScanSample.cc  Readme.txt  Request.h  utils.h
green-third-party-sdk/green-csharp-sdk/: README.md  green-csharp-sdk.sln
green-third-party-sdk/green-csharp-sdk/green-csharp-sdk/: ImageSyncScanSample.cs  Model.cs  TextScanSample.cs  green-csharp-sdk.csproj
green-third-party-sdk/green-csharp-sdk/green-csharp-sdk/Properties/: AssemblyInfo.cs
green-third-party-sdk/green-nodejs-sdk/: Readme.txt  green-nodejs-invoker.js  imageSyncScanSample.js
green-third-party-sdk/green-python3.5-sdk/: .gitignore  README.md  imageSyncScanSample.py  profile.py  service.py  utils.py
map-struct-json-marshal-benchmark/: map-struct-marshal.go  map-struct-marshal_test.go  readme.md  rungotest
